# haskell-mooc

./: .gitignore  Set1.hs  Taskfile.yaml  flake.nix  tests.cabal
Examples/: Collatz.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.3/: package.cache  tests-0.0.1-inplace.conf
